@@ -38,6 +38,7 @@ import google.registry.model.common.Cursor;
 import google.registry.model.registrar.Registrar;
 import google.registry.model.registrar.RegistrarAddress;
 import google.registry.model.registrar.RegistrarPoc;
+import google.registry.model.registrar.RegistrarPocBase;
 import google.registry.persistence.transaction.JpaTestExtensions;
 import google.registry.persistence.transaction.JpaTestExtensions.JpaIntegrationTestExtension;
 import google.registry.testing.DatabaseHelper;
@@ -157,7 +158,8 @@ public class SyncRegistrarsSheetTest {
                 .setName("Jane Doe")
                 .setEmailAddress("contact@example.com")
                 .setPhoneNumber("+1.1234567890")
-                .setTypes(ImmutableSet.of(RegistrarPoc.Type.ADMIN, RegistrarPoc.Type.BILLING))
+                .setTypes(
+                    ImmutableSet.of(RegistrarPocBase.Type.ADMIN, RegistrarPocBase.Type.BILLING))
                 .build(),
             new RegistrarPoc.Builder()
                 .setRegistrar(registrar)
@@ -165,18 +167,17 @@ public class SyncRegistrarsSheetTest {
                 .setEmailAddress("john.doe@example.tld")
                 .setPhoneNumber("+1.1234567890")
                 .setFaxNumber("+1.1234567891")
-                .setTypes(ImmutableSet.of(RegistrarPoc.Type.ADMIN))
+                .setTypes(ImmutableSet.of(RegistrarPocBase.Type.ADMIN))
                 // Purposely flip the internal/external admin/tech
                 // distinction to make sure we're not relying on it.  Sigh.
                 .setVisibleInWhoisAsAdmin(false)
                 .setVisibleInWhoisAsTech(true)
-                .setLoginEmailAddress("john.doe@example.tld")
                 .build(),
             new RegistrarPoc.Builder()
                 .setRegistrar(registrar)
                 .setName("Jane Smith")
                 .setEmailAddress("pride@example.net")
-                .setTypes(ImmutableSet.of(RegistrarPoc.Type.TECH))
+                .setTypes(ImmutableSet.of(RegistrarPocBase.Type.TECH))
                 .build());
     // Use registrar key for contacts' parent.
     DateTime registrarCreationTime = persistResource(registrar).getCreationTime();
@@ -189,7 +190,7 @@ public class SyncRegistrarsSheetTest {
     ImmutableList<ImmutableMap<String, String>> rows = getOnlyElement(rowsCaptor.getAllValues());
     assertThat(rows).hasSize(2);
 
-    ImmutableMap<String, String> row = rows.get(0);
+    ImmutableMap<String, String> row = rows.getFirst();
     assertThat(row).containsEntry("registrarId", "aaaregistrar");
     assertThat(row).containsEntry("registrarName", "AAA Registrar Inc.");
     assertThat(row).containsEntry("state", "SUSPENDED");
@@ -197,40 +198,38 @@ public class SyncRegistrarsSheetTest {
     assertThat(row)
         .containsEntry(
             "primaryContacts",
-            ""
-                + "Jane Doe\n"
-                + "contact@example.com\n"
-                + "Tel: +1.1234567890\n"
-                + "Types: [ADMIN, BILLING]\n"
-                + "Visible in registrar WHOIS query as Admin contact: No\n"
-                + "Visible in registrar WHOIS query as Technical contact: No\n"
-                + "Phone number and email visible in domain WHOIS query as "
-                + "Registrar Abuse contact info: No\n"
-                + "Registrar-Console access: No\n"
-                + '\n'
-                + "John Doe\n"
-                + "john.doe@example.tld\n"
-                + "Tel: +1.1234567890\n"
-                + "Fax: +1.1234567891\n"
-                + "Types: [ADMIN]\n"
-                + "Visible in registrar WHOIS query as Admin contact: No\n"
-                + "Visible in registrar WHOIS query as Technical contact: Yes\n"
-                + "Phone number and email visible in domain WHOIS query as "
-                + "Registrar Abuse contact info: No\n"
-                + "Registrar-Console access: Yes\n"
-                + "Login Email Address: john.doe@example.tld\n");
+            """
+                Jane Doe
+                contact@example.com
+                Tel: +1.1234567890
+                Types: [ADMIN, BILLING]
+                Visible in registrar WHOIS query as Admin contact: No
+                Visible in registrar WHOIS query as Technical contact: No
+                Phone number and email visible in domain WHOIS query as Registrar Abuse contact\
+                 info: No
+
+                John Doe
+                john.doe@example.tld
+                Tel: +1.1234567890
+                Fax: +1.1234567891
+                Types: [ADMIN]
+                Visible in registrar WHOIS query as Admin contact: No
+                Visible in registrar WHOIS query as Technical contact: Yes
+                Phone number and email visible in domain WHOIS query as Registrar Abuse contact\
+                 info: No
+                """);
     assertThat(row)
         .containsEntry(
             "techContacts",
-            ""
-                + "Jane Smith\n"
-                + "pride@example.net\n"
-                + "Types: [TECH]\n"
-                + "Visible in registrar WHOIS query as Admin contact: No\n"
-                + "Visible in registrar WHOIS query as Technical contact: No\n"
-                + "Phone number and email visible in domain WHOIS query as "
-                + "Registrar Abuse contact info: No\n"
-                + "Registrar-Console access: No\n");
+            """
+                Jane Smith
+                pride@example.net
+                Types: [TECH]
+                Visible in registrar WHOIS query as Admin contact: No
+                Visible in registrar WHOIS query as Technical contact: No
+                Phone number and email visible in domain WHOIS query as Registrar Abuse contact\
+                 info: No
+                """);
     assertThat(row).containsEntry("marketingContacts", "");
     assertThat(row).containsEntry("abuseContacts", "");
     assertThat(row).containsEntry("whoisInquiryContacts", "");
@@ -238,32 +237,31 @@ public class SyncRegistrarsSheetTest {
     assertThat(row)
         .containsEntry(
             "billingContacts",
-            ""
-                + "Jane Doe\n"
-                + "contact@example.com\n"
-                + "Tel: +1.1234567890\n"
-                + "Types: [ADMIN, BILLING]\n"
-                + "Visible in registrar WHOIS query as Admin contact: No\n"
-                + "Visible in registrar WHOIS query as Technical contact: No\n"
-                + "Phone number and email visible in domain WHOIS query as "
-                + "Registrar Abuse contact info: No\n"
-                + "Registrar-Console access: No\n");
+            """
+                Jane Doe
+                contact@example.com
+                Tel: +1.1234567890
+                Types: [ADMIN, BILLING]
+                Visible in registrar WHOIS query as Admin contact: No
+                Visible in registrar WHOIS query as Technical contact: No
+                Phone number and email visible in domain WHOIS query as Registrar Abuse contact\
+                 info: No
+                """);
     assertThat(row).containsEntry("contactsMarkedAsWhoisAdmin", "");
     assertThat(row)
         .containsEntry(
             "contactsMarkedAsWhoisTech",
-            ""
-                + "John Doe\n"
-                + "john.doe@example.tld\n"
-                + "Tel: +1.1234567890\n"
-                + "Fax: +1.1234567891\n"
-                + "Types: [ADMIN]\n"
-                + "Visible in registrar WHOIS query as Admin contact: No\n"
-                + "Visible in registrar WHOIS query as Technical contact: Yes\n"
-                + "Phone number and email visible in domain WHOIS query as "
-                + "Registrar Abuse contact info: No\n"
-                + "Registrar-Console access: Yes\n"
-                + "Login Email Address: john.doe@example.tld\n");
+            """
+                John Doe
+                john.doe@example.tld
+                Tel: +1.1234567890
+                Fax: +1.1234567891
+                Types: [ADMIN]
+                Visible in registrar WHOIS query as Admin contact: No
+                Visible in registrar WHOIS query as Technical contact: Yes
+                Phone number and email visible in domain WHOIS query as Registrar Abuse contact\
+                 info: No
+                """);
     assertThat(row).containsEntry("emailAddress", "nowhere@example.org");
     assertThat(row).containsEntry(
         "address.street", "I get fallen back upon since there's no l10n addr");
